--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 annotated-types==0.7.0
 anyio==4.4.0
+bcrypt==4.2.0
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.112.0
 h11==0.14.0
 idna==3.7
@@ -11,8 +13,10 @@ motor==3.5.1
 passlib==1.7.4
 pyasn1==0.6.0
 pydantic==2.8.2
+pydantic-settings==2.4.0
 pydantic_core==2.20.1
 pymongo==4.8.0
+python-dotenv==1.0.1
 python-jose==3.3.0
 rsa==4.9
 six==1.16.0
